--- a/_config.yml
+++ b/_config.yml
@@ -57,11 +57,7 @@ yandex_site_verification :
 
 # Social Sharing
 twitter:
-  username               : &twitter
-facebook:
-  username               :
-  app_id                 :
-  publisher              :
+  username               : ThroneOfShadow
 og_image                 :  # Open Graph/Twitter default site image
 # For specifying social profiles
 # - https://developers.google.com/structured-data/customize/social-profiles
@@ -80,36 +76,36 @@ analytics:
 
 # Site Author
 author:
-  name             : "Your Sidebar Name"
+  name             : "Brett Nelson"
   avatar           : "profile.png"
-  bio              : "Your biography for the left-hand sidebar"
-  location         : "Location"
-  employer         :
-  pubmed           : "https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "http://yourfullgooglescholarurl.com"
-  email            :
-  researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
+  bio              : "I investigate how neural activity in the motor cortex produces movements. Movement over time defines behavior. I investigate how behavior evolves and is produced at varying timescales using a variety of computational techniques, seeking to match behavior to neural activity.
+To this end, I record in-vivo neural activity from rats performing reaches. My experiments yield complex behavioral and neural activity, which demand the application of various novel computational techniques to forward our understanding of this neuroethologically rich paradigm. "
+  location         : "Bay Area, USA"
+  employer         : "Lawrence Berkeley National Laboratory"
+  pubmed           : 
+  googlescholar    : 
+  email            : "brrnelson@berkeley.edu"
+  researchgate     : " https://www.researchgate.net/profile/Brett_Nelson11 "
   uri              :
   bitbucket        :
   codepen          :
   dribbble         :
   flickr           :
-  facebook         :
   foursquare       :
-  github           : "academicpages"
+  github           : "throneofshadow"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         :
-  orcid            : "http://orcid.org/yourorcidurl"
+  linkedin         : "www.linkedin.com/in/BNelson210"
+  orcid            : "http://orcid.org/0000-0003-2626-9342"
   pinterest        :
   soundcloud       :
-  stackoverflow    : # http://stackoverflow.com/users/123456/username
+  stackoverflow    : 
   steam            :
   tumblr           :
-  twitter          : "replacethistwitterhandle"
+  twitter          : "ThroneOfShadow"
   vine             :
   weibo            :
   xing             :
@@ -173,20 +169,7 @@ kramdown:
   enable_coderay: false
 
 
-# Collections
-collections:
-  teaching:
-    output: true
-    permalink: /:collection/:path/
-  publications:
-    output: true
-    permalink: /:collection/:path/
-  portfolio:
-    output: true
-    permalink: /:collection/:path/
-  talks:
-    output: true
-    permalink: /:collection/:path/
+
 
 
 # Defaults
@@ -227,23 +210,7 @@ defaults:
       author_profile: true
       share: true
       comments: true
-  # _portfolio
-  - scope:
-      path: ""
-      type: portfolio
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comment: true
-  # _talks
-  - scope:
-      path: ""
-      type: talks
-    values:
-      layout: talk
-      author_profile: true
-      share: true
+ 
 
 # Sass/SCSS
 sass:
